--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "format:check": "prettier --check .",
     "test": "playwright test",
     "test:ui": "playwright test --ui",
-    "test:debug": "playwright test --debug"
+    "test:debug": "playwright test --debug",
+    "test:unit": "vitest",
+    "test:unit:coverage": "vitest --coverage",
+    "test:integration": "playwright test --grep='@integration'",
+    "test:e2e": "playwright test",
+    "start:mock-backend": "node scripts/mock-backend.js"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -50,16 +55,33 @@
     "@eslint/js": "^9.35.0",
     "@playwright/test": "^1.55.0",
     "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.0",
+    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.1",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
+    "axe-core": "^4.10.4",
+    "axe-crawler": "^1.0.9",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "eslint": "^9.35.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-security": "^3.0.1",
     "globals": "^16.4.0",
+    "jsdom": "^26.0.0",
+    "license-checker": "^25.0.1",
+    "lighthouse": "^12.2.1",
+    "lhci": "@lhci/cli@0.15.0",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
-    "semantic-release": "^24.2.7"
+    "semantic-release": "^24.2.7",
+    "vite": "^6.1.2",
+    "vitest": "^2.1.8",
+    "wait-on": "^8.0.2"
   }
 }
